fix: correct paths in vercel.json based on actual project structure

--- a/vercel.json
+++ b/vercel.json
@@ -17,14 +17,18 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/backend/index.js"
+      "dest": "backend/index.js"
     },
     {
       "handle": "filesystem"
     },
     {
+      "src": "/assets/(.*)",
+      "dest": "/dist/assets/$1"
+    },
+    {
       "src": "/(.*)",
-      "dest": "/edumate/dist/index.html"
+      "dest": "/dist/index.html"
     }
   ],
   "env": {
