refactor: rename edumate folder to client for clarity

--- a/vercel.json
+++ b/vercel.json
@@ -6,11 +6,11 @@
       "use": "@vercel/node"
     },
     {
-      "src": "edumate/package.json",
+      "src": "client/package.json",
       "use": "@vercel/static-build",
       "config": {
         "distDir": "dist",
-        "buildCommand": "cd edumate && npm install && npm run build"
+        "buildCommand": "cd client && npm install && npm run build"
       }
     }
   ],
