--- a/backend/package.json
+++ b/backend/package.json
@@ -5,11 +5,13 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "build": "npm install && npm install --save-dev nodemon"
   },
   "dependencies": {
     "@google/generative-ai": "^0.1.3",
     "@microsoft/microsoft-graph-client": "^3.0.7",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
